--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_SECRET=023d10c1e42dc42c55d85b43d79d68a9
+APP_ENV=
+APP_SECRET=
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -30,6 +30,7 @@ APP_SECRET=023d10c1e42dc42c55d85b43d79d68a9
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://localhost:1025
+MAILER_DSN=
+
 # 
 ###< symfony/mailer ###
